--- a/src/static/style/_vars.scss
+++ b/src/static/style/_vars.scss
@@ -20,3 +20,4 @@ $primary: var(--primary);
 $primaryContrast: var(--primary-contrast);
 $widthM: 50%;
 $widthL: 60%;
+$link-color: #7da3f9;
